chore: updated git repo

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/luizeboli/hypa.git"
+    "url": "git+https://github.com/luizeboli/hypa-git.git"
   },
   "author": "Luiz Felicio (https://github.com/luizeboli)",
   "license": "MIT"
