--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hypa-git",
-  "version": "0.1.9-alpha",
+  "version": "1.0.0",
   "description": "A zsh script to create new RC's and merge branches",
   "scripts": {
     "postinstall": "./scripts/postinstall.zsh",
